[package]
name = "krawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
serde = { version = "1.0.171", features = ["derive"] }
